--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -37,3 +37,9 @@
    ========================================= */
 /* Copyright (c) 2016, Minas Antonios */
 /* http://opensource.org/licenses/gpl-2.0.php GPL v2 or later */
+#stampd_ext_wp_post_metabox .inside:not(.inside--actual) {
+  padding: 0;
+  margin: 0; }
+
+#stampd_ext_wp_hash {
+  width: 100%; }
