--- a/assets/src/scss/admin.scss
+++ b/assets/src/scss/admin.scss
@@ -1,8 +1,17 @@
 /* =========================================
 		ADMIN STYLES
    ========================================= */
-
 /* Copyright (c) 2016, Minas Antonios */
 /* http://opensource.org/licenses/gpl-2.0.php GPL v2 or later */
-
 @import "common";
+
+#stampd_ext_wp_post_metabox {
+  .inside:not(.inside--actual) {
+    padding: 0;
+    margin: 0;
+  }
+}
+
+#stampd_ext_wp_hash {
+  width: 100%;
+}
