--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -41,5 +41,8 @@
   padding: 0;
   margin: 0; }
 
-#stampd_ext_wp_hash {
+#stampd_ext_wp_post_metabox input.full-width {
   width: 100%; }
+
+#stampd_ext_wp_post_metabox .float-right {
+  float: right; }
