--- a/assets/src/scss/admin.scss
+++ b/assets/src/scss/admin.scss
@@ -10,8 +10,13 @@
     padding: 0;
     margin: 0;
   }
+
+  input.full-width {
+    width: 100%;
+  }
+
+  .float-right {
+    float: right;
+  }
 }
 
-#stampd_ext_wp_hash {
-  width: 100%;
-}
